load asset improvement

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "future": "cpp",
     "list": "cpp",
     "xhash": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "memory": "cpp"
   }
 }
