--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "list": "cpp",
     "xhash": "cpp",
     "ostream": "cpp",
-    "memory": "cpp"
+    "memory": "cpp",
+    "iosfwd": "cpp"
   }
 }
